--- a/projectV3.ipynb
+++ b/projectV3.ipynb
@@ -223,14 +223,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 30,
       "metadata": {
         "id": "zpfXAkBW5jcj"
       },
       "outputs": [],
       "source": [
         "def find_flower_cluster(clusters, rows, cols, pixels_num): #image_width and height\n",
-        "    color_range = 16\n",
+        "    color_range = 20\n",
         "    center_weight = 18\n",
         "    color_weight = 14\n",
         "    size_weight = 6\n",
@@ -652,18 +652,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 31,
       "metadata": {
         "id": "TDdFsEm5nu5e",
-        "outputId": "72110792-1282-496d-9fca-96ae27515f98",
+        "outputId": "dd82e181-1a01-458d-b9fa-b02eb6eb2f18",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "outputs": [
         {
-          "output_type": "stream",
+          "metadata": {
+            "tags": null
+          },
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
@@ -776,8 +779,6 @@
             "  warnings.warn(\n",
             "/usr/local/lib/python3.10/dist-packages/sklearn/cluster/_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
             "  warnings.warn(\n",
-            "<ipython-input-23-400084130cd8>:25: RuntimeWarning: invalid value encountered in double_scalars\n",
-            "  a4 = np.sum((hue[bottom_indices] - np.mean(hue)) * normalized_distance[bottom_indices]) / np.sum(normalized_distance[bottom_indices]**2)\n",
             "/usr/local/lib/python3.10/dist-packages/sklearn/cluster/_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
             "  warnings.warn(\n",
             "/usr/local/lib/python3.10/dist-packages/sklearn/cluster/_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
@@ -848,8 +849,16 @@
             "  warnings.warn(\n",
             "/usr/local/lib/python3.10/dist-packages/sklearn/cluster/_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
             "  warnings.warn(\n",
-            "<ipython-input-23-400084130cd8>:25: RuntimeWarning: invalid value encountered in double_scalars\n",
-            "  a4 = np.sum((hue[bottom_indices] - np.mean(hue)) * normalized_distance[bottom_indices]) / np.sum(normalized_distance[bottom_indices]**2)\n",
+            "/usr/local/lib/python3.10/dist-packages/sklearn/cluster/_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
+            "  warnings.warn(\n",
+            "/usr/local/lib/python3.10/dist-packages/sklearn/cluster/_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
+            "  warnings.warn(\n",
+            "/usr/local/lib/python3.10/dist-packages/sklearn/cluster/_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
+            "  warnings.warn(\n",
+            "/usr/local/lib/python3.10/dist-packages/sklearn/cluster/_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
+            "  warnings.warn(\n",
+            "/usr/local/lib/python3.10/dist-packages/sklearn/cluster/_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
+            "  warnings.warn(\n",
             "/usr/local/lib/python3.10/dist-packages/sklearn/cluster/_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
             "  warnings.warn(\n",
             "/usr/local/lib/python3.10/dist-packages/sklearn/cluster/_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
@@ -1794,7 +1803,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Accuracy: 56.25%\n"
+            "Accuracy: 58.04%\n"
           ]
         }
       ],
