shape features' effect

--- a/projectV3.ipynb
+++ b/projectV3.ipynb
@@ -22,7 +22,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {
         "id": "Ohy-uGrhk_6j"
       },
@@ -44,13 +44,12 @@
         "import math\n",
         "from google.colab import drive\n",
         "import pandas as pd\n",
-        "from sklearn.metrics import confusion_matrix, precision_score, recall_score, f1_score, accuracy_score\n",
-        "\n"
+        "from sklearn.metrics import confusion_matrix, precision_score, recall_score, f1_score, accuracy_score\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 2,
       "metadata": {
         "id": "nS6YU0nL5jch"
       },
@@ -89,7 +88,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 3,
       "metadata": {
         "id": "WoQeqXudbsdK"
       },
@@ -113,7 +112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 4,
       "metadata": {
         "id": "hLsdn84i5jci"
       },
@@ -187,7 +186,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 5,
       "metadata": {
         "id": "QQrIJ8QV5jci"
       },
@@ -226,14 +225,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 6,
       "metadata": {
         "id": "zpfXAkBW5jcj"
       },
       "outputs": [],
       "source": [
         "def find_flower_cluster(clusters, rows, cols, pixels_num): #image_width and height\n",
-        "    color_range = 22\n",
+        "    color_range = 20\n",
         "    center_weight = 18\n",
         "    color_weight = 14\n",
         "    size_weight = 6\n",
@@ -335,7 +334,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 7,
       "metadata": {
         "id": "hE1TcabQ5jck"
       },
@@ -409,7 +408,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 8,
       "metadata": {
         "id": "g7p6Uguf5jck"
       },
@@ -423,7 +422,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 9,
       "metadata": {
         "id": "ICcTrA0M5jck"
       },
@@ -456,7 +455,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 10,
       "metadata": {
         "id": "PGV9pvji5jck"
       },
@@ -500,7 +499,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 11,
       "metadata": {
         "id": "K2LdO5kSZA0C"
       },
@@ -538,7 +537,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 12,
       "metadata": {
         "id": "XdQZfRgbZF1C"
       },
@@ -578,7 +577,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 13,
       "metadata": {
         "id": "VKtz4V1JZKpZ"
       },
@@ -602,13 +601,13 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 14,
+      "metadata": {
+        "id": "1j0ZgGqh7cFF"
+      },
+      "outputs": [],
       "source": [
-        "\n",
-        "\n",
         "def MatrixCal(true_labels,predicted_labels):\n",
-        "# Assuming you have the true labels and predicted labels in separate arrays or lists\n",
-        "#true_labels = [1, 2, 2, 3, 3, 4, 4, 4, 5, 5, 5, 5, 6, 6, 6, 6, 7, 7, 7, 7]\n",
-        "#predicted_labels = [1, 2, 3, 3, 2, 4, 5, 5, 4, 5, 6, 7, 6, 5, 4, 6, 7, 7, 6, 7]\n",
         "\n",
         "# Create the confusion matrix\n",
         "   confusion_mat = confusion_matrix(true_labels, predicted_labels)\n",
@@ -629,17 +628,12 @@
         "   print(\"\\nPrecision:\", precision)\n",
         "   print(\"Recall:\", recall)\n",
         "   print(\"F1-score:\", f1)\n",
-        "   print(\"Accuracy:\", accuracy)\n"
-      ],
-      "metadata": {
-        "id": "j_z5DYohYX_m"
-      },
-      "execution_count": 16,
-      "outputs": []
+        "   print(\"Accuracy:\", accuracy)"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 16,
       "metadata": {
         "id": "lgH6_c6wZRbD"
       },
@@ -678,14 +672,14 @@
         "    normalized_features = scaler.fit_transform(features_vector[:, :])\n",
         "\n",
         "    weighted_features = np.empty([len(normalized_features), 8])\n",
-        "    weighted_features[:, 0] = normalized_features[:, 0] * 3\n",
-        "    weighted_features[:, 1] = normalized_features[:, 1] * 2\n",
-        "    weighted_features[:, 2] = normalized_features[:, 2] * 2\n",
-        "    weighted_features[:, 3] = normalized_features[:, 3] * 2\n",
-        "    weighted_features[:, 4] = normalized_features[:, 4] * 2\n",
-        "    weighted_features[:, 5] = normalized_features[:, 5] * 1\n",
-        "    weighted_features[:, 6] = normalized_features[:, 6] * 1\n",
-        "    weighted_features[:, 7] = normalized_features[:, 7] * 1\n",
+        "    weighted_features[:, 0] = normalized_features[:, 0] * 1\n",
+        "    weighted_features[:, 1] = normalized_features[:, 1] * 1\n",
+        "    weighted_features[:, 2] = normalized_features[:, 2] * 1\n",
+        "    weighted_features[:, 3] = normalized_features[:, 3] * 1\n",
+        "    weighted_features[:, 4] = normalized_features[:, 4] * 1\n",
+        "    weighted_features[:, 5] = normalized_features[:, 5] * 3\n",
+        "    weighted_features[:, 6] = normalized_features[:, 6] * 3\n",
+        "    weighted_features[:, 7] = normalized_features[:, 7] * 3\n",
         "\n",
         "    y_test,y_pred =classify(weighted_features, labels)\n",
         "    MatrixCal(y_test,y_pred)"
@@ -693,23 +687,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "TDdFsEm5nu5e",
-        "outputId": "66a66066-507e-41b7-9cec-52afda8d3397"
+        "outputId": "530bb18b-095b-40cb-d66f-4a508a8c5eac"
       },
       "outputs": [
         {
-          "metadata": {
-            "tags": null
-          },
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         },
         {
@@ -822,7 +813,7 @@
             "  warnings.warn(\n",
             "/usr/local/lib/python3.10/dist-packages/sklearn/cluster/_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
             "  warnings.warn(\n",
-            "<ipython-input-13-400084130cd8>:25: RuntimeWarning: invalid value encountered in double_scalars\n",
+            "<ipython-input-11-400084130cd8>:25: RuntimeWarning: invalid value encountered in double_scalars\n",
             "  a4 = np.sum((hue[bottom_indices] - np.mean(hue)) * normalized_distance[bottom_indices]) / np.sum(normalized_distance[bottom_indices]**2)\n",
             "/usr/local/lib/python3.10/dist-packages/sklearn/cluster/_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
             "  warnings.warn(\n",
@@ -894,7 +885,7 @@
             "  warnings.warn(\n",
             "/usr/local/lib/python3.10/dist-packages/sklearn/cluster/_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
             "  warnings.warn(\n",
-            "<ipython-input-13-400084130cd8>:25: RuntimeWarning: invalid value encountered in double_scalars\n",
+            "<ipython-input-11-400084130cd8>:25: RuntimeWarning: invalid value encountered in double_scalars\n",
             "  a4 = np.sum((hue[bottom_indices] - np.mean(hue)) * normalized_distance[bottom_indices]) / np.sum(normalized_distance[bottom_indices]**2)\n",
             "/usr/local/lib/python3.10/dist-packages/sklearn/cluster/_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
             "  warnings.warn(\n",
@@ -1678,6 +1669,8 @@
             "  warnings.warn(\n",
             "/usr/local/lib/python3.10/dist-packages/sklearn/cluster/_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
             "  warnings.warn(\n",
+            "<ipython-input-11-400084130cd8>:25: RuntimeWarning: invalid value encountered in double_scalars\n",
+            "  a4 = np.sum((hue[bottom_indices] - np.mean(hue)) * normalized_distance[bottom_indices]) / np.sum(normalized_distance[bottom_indices]**2)\n",
             "/usr/local/lib/python3.10/dist-packages/sklearn/cluster/_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
             "  warnings.warn(\n",
             "/usr/local/lib/python3.10/dist-packages/sklearn/cluster/_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
@@ -1846,21 +1839,21 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Accuracy: 56.25%\n",
+            "Accuracy: 54.46%\n",
             "Confusion Matrix:\n",
             "       Pred1  Pred2  Pred3  Pred4  Pred5  Pred6  Pred7\n",
-            "True1     16      0      0      0      2      1      0\n",
-            "True2      2      9      3      2      0      4      1\n",
-            "True3      0      5      8      1      0      2      0\n",
-            "True4      2      0      0      8      2      1      0\n",
-            "True5      0      1      2      0      9      4      0\n",
-            "True6      0      1      3      1      0      3      1\n",
-            "True7      0      3      1      4      0      0     10\n",
+            "True1     15      0      0      1      2      1      0\n",
+            "True2      2     11      2      4      0      1      1\n",
+            "True3      0      6      7      1      1      1      0\n",
+            "True4      2      0      0      7      2      2      0\n",
+            "True5      1      2      1      4      6      2      0\n",
+            "True6      0      2      1      0      1      4      1\n",
+            "True7      2      1      1      2      0      1     11\n",
             "\n",
-            "Precision: 0.5986937791310857\n",
-            "Recall: 0.5625\n",
-            "F1-score: 0.5727747109212625\n",
-            "Accuracy: 0.5625\n"
+            "Precision: 0.5697153723469512\n",
+            "Recall: 0.5446428571428571\n",
+            "F1-score: 0.5481610080803863\n",
+            "Accuracy: 0.5446428571428571\n"
           ]
         }
       ],
@@ -1879,13 +1872,13 @@
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
     "colab": {
       "provenance": [],
       "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
-      "language": "python",
       "name": "python3"
     },
     "language_info": {
